src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Land</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1st Contact Completed</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Land%2FLease</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1st Contact Completed</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Activity_Logged_Time__c</fullName>
        <label>Activity Logged Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Park_Copy__c</fullName>
        <formula>Business_Park__r.Name</formula>
        <label>Business Park Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Incorporation__c</fullName>
        <label>Country of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>License_type__c</fullName>
        <label>License type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nationality</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Boarding_Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On-Boarding Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                    <label>Commercial Office</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Business Center</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Co-working</fullName>
                    <isActive>false</isActive>
                    <label>Co-Working</label>
                </value>
                <value>
                    <fullName>Common Area</fullName>
                    <isActive>false</isActive>
                    <label>Common Area</label>
                </value>
                <value>
                    <fullName>Desk</fullName>
                    <isActive>false</isActive>
                    <label>Desk</label>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                    <isActive>false</isActive>
                    <label>Executive Office</label>
                </value>
                <value>
                    <fullName>Free Parking</fullName>
                    <isActive>false</isActive>
                    <label>Free Parking</label>
                </value>
                <value>
                    <fullName>Labour Village</fullName>
                    <isActive>false</isActive>
                    <label>Labour Village</label>
                </value>
                <value>
                    <fullName>Open Yard</fullName>
                    <isActive>false</isActive>
                    <label>Open Yard</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Other Rooms</fullName>
                    <isActive>false</isActive>
                    <label>Other Rooms</label>
                </value>
                <value>
                    <fullName>Other Units</fullName>
                    <isActive>false</isActive>
                    <label>Other Units</label>
                </value>
                <value>
                    <fullName>Paid Parking</fullName>
                    <isActive>false</isActive>
                    <label>Paid Parking</label>
                </value>
                <value>
                    <fullName>Parking</fullName>
                    <isActive>false</isActive>
                    <label>Parking</label>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                    <isActive>false</isActive>
                    <label>Phase 2</label>
                </value>
                <value>
                    <fullName>Research and Development</fullName>
                    <isActive>false</isActive>
                    <label>Research and Development</label>
                </value>
                <value>
                    <fullName>Retail Support</fullName>
                    <isActive>false</isActive>
                    <label>Retail Support</label>
                </value>
                <value>
                    <fullName>Shared Desk - Daily</fullName>
                    <isActive>false</isActive>
                    <label>Shared Desk - Daily</label>
                </value>
                <value>
                    <fullName>Shared Desk - Freelancer</fullName>
                    <isActive>false</isActive>
                    <label>Shared Desk - Freelancer</label>
                </value>
                <value>
                    <fullName>Showroom</fullName>
                    <isActive>false</isActive>
                    <label>Showroom</label>
                </value>
                <value>
                    <fullName>Signage</fullName>
                    <isActive>false</isActive>
                    <label>Signage</label>
                </value>
                <value>
                    <fullName>Soundstage</fullName>
                    <isActive>false</isActive>
                    <label>Soundstage</label>
                </value>
                <value>
                    <fullName>Storage</fullName>
                    <isActive>false</isActive>
                    <label>Storage</label>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                    <isActive>false</isActive>
                    <label>Warehouse</label>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                    <isActive>false</isActive>
                    <label>Workshop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Legal_Form_of_Business__c</fullName>
        <label>Proposed Legal Form of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FZ-LLC Natural Person</fullName>
                </value>
                <value>
                    <fullName>FZ-LLC Corporate Person</fullName>
                </value>
                <value>
                    <fullName>Branch of Foreign Company</fullName>
                </value>
                <value>
                    <fullName>Branch of UAE Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>F&amp;B</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>New Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TempOwnerId__c</fullName>
        <description>Backend field to manage Lead Assignment</description>
        <label>TempOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Day_after_Lead_logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1 Day after Lead logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_Days_after__c</fullName>
        <defaultValue>false</defaultValue>
        <label>30 Days after</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>D3_Commercial_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>D3 Commercial</label>
        <queue>D3_Commercial</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D3_General_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>D3 General</label>
        <queue>D3_General</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D3_Land_Lease_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>D3 Land Lease</label>
        <queue>D3_Land_Lease</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D3_Premise_Lease_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>D3 Premise Lease</label>
        <queue>D3_Premise_Lease</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D3_Retail_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>D3 Retail</label>
        <queue>D3_Retail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIAC_Business_Center_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIAC Business Center</label>
        <queue>DIAC_Business_Center</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIAC_Commercial_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIAC Commercial</label>
        <queue>DIAC_Commercial</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIAC_General_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIAC General</label>
        <queue>DIAC_General</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIAC_Retail_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIAC Retail</label>
        <queue>DIAC_Retail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIC_Business_Center_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIC Business Center</label>
        <queue>DIC_Business_Center</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIC_Commercial_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIC Commercial</label>
        <queue>DIC_Commercial</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIC_General_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIC General</label>
        <queue>DIC_General</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIC_Retail_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIC Retail</label>
        <queue>DIC_Retail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIP_Business_Center_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DIP Business Center</label>
        <queue>DIP_Business_Center</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <businessProcess>Land%2FLease</businessProcess>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <businessProcess>Land%2FLease</businessProcess>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Cannot_convert_lead_without_activity</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Activity_Logged_Time__c) &amp;&amp;
IsConverted = true</errorConditionFormula>
        <errorMessage>Please log at least one activity before converting the lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Name_Required_for_Source_Events</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( LeadSource , &apos;Events&apos;),
ISBLANK( Event_Name__c )
)</errorConditionFormula>
        <errorDisplayField>Event_Name__c</errorDisplayField>
        <errorMessage>Please complete the Events Name field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Category_after_1st_Contact</fullName>
        <active>true</active>
        <description>Product category must be populated after 1st contact.</description>
        <errorConditionFormula>NOT(ISBLANK(CreatedDate)) &amp;&amp;
ISPICKVAL( Status, &quot;Closed - Converted&quot;)&amp;&amp; 
ISPICKVAL( Product_Category__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Product_Category__c</errorDisplayField>
        <errorMessage>Please enter the product category before converting this lead.</errorMessage>
    </validationRules>
</CustomObject>